# Gemini-Web2API

./: .env.example  .gitignore  README.md  get_cookies.py  go.mod  go.sum  openai_adapter.py  pyproject.toml  requirements.txt  run.bat  run.sh
cmd/server/: main.go
internal/adapter/: claude_handler.go  gemini_handler.go  handler.go  image_handler.go
internal/balancer/: balancer.go
internal/browser/: cookie.go
internal/claude/: streaming.go
internal/config/: mapping.go
internal/gemini/: client.go  fingerprint.go  payload.go  upload.go
src/gemini_webapi/utils/: get_access_token.py
