[build-system]
requires = ["setuptools>=69", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-webapi"
authors = [
    {name = "Mag1cFall"},
]
description = "✨ An elegant async Python wrapper for Google Gemini web app"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["API", "async", "Gemini", "Bard", "Google", "Generative AI", "LLM"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "httpx[http2]~=0.28.1",
    "loguru~=0.7.3",
    "orjson~=3.10.18",
    "pydantic~=2.11.5",
]
version = "0.1.0"

[project.urls]
Repository = "https://github.com/Mag1cFall/Gemini-Web2API.git"
Issues = "https://github.com/Mag1cFall/Gemini-Web2API/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["gemini_webapi"]
